--- a/archiver/package.json
+++ b/archiver/package.json
@@ -4,7 +4,7 @@
   "description": "Archiver that listens to messages on slack channels and stores them in elasticsearch",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
