--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
+version: '2'
+
 services:
   elasticsearch:
-    build: ./elasticseearch
+    build: ./elasticsearch
   archiver:
     build: ./archiver
