--- a/archiver/package.json
+++ b/archiver/package.json
@@ -4,7 +4,9 @@
   "description": "Archiver that listens to messages on slack channels and stores them in elasticsearch",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node dist/index.js",
+    "start:dev": "nodemon --exec babel-node src/index.js",
+    "build": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,15 @@
   },
   "homepage": "https://github.com/BenoitAverty/slarchive#readme",
   "dependencies": {
+    "config": "^1.21.0",
     "node-fetch": "^1.6.3",
+    "ramda": "^0.22.1",
     "rxjs": "^5.0.0-rc.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "nodemon": "^1.11.0"
   }
 }
