--- a/archiver/package.json
+++ b/archiver/package.json
@@ -26,8 +26,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-transform-function-bind": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.8.1",
+    "eslint-config-cleanjs": "^4.0.0",
+    "eslint-plugin-better": "^0.1.5",
+    "eslint-plugin-fp": "^2.2.0",
+    "eslint-plugin-import": "^2.0.1",
     "nodemon": "^1.11.0"
   }
 }
