--- a/archiver/package.json
+++ b/archiver/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.8.1",
     "eslint-config-cleanjs": "^4.0.0",
