--- a/archiver/.babelrc
+++ b/archiver/.babelrc
@@ -1,4 +1,8 @@
 {
   presets: ["es2015"],
-  plugins: ["transform-function-bind", "transform-object-rest-spread"]
+  plugins: [
+    "transform-function-bind",
+    "transform-object-rest-spread",
+    ["babel-root-import", { "rootPathSuffix": "src" }]
+  ]
 }
