--- a/archiver/package.json
+++ b/archiver/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/BenoitAverty/slarchive#readme",
   "dependencies": {
+    "@cycle/rxjs-run": "^3.0.3",
     "config": "^1.21.0",
     "node-fetch": "^1.6.3",
     "ramda": "^0.22.1",
-    "rxjs": "^5.0.0-rc.1"
+    "rxjs": "^5.0.0-rc.1",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -30,11 +32,12 @@
     "babel-plugin-transform-function-bind": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-root-import": "^4.1.5",
     "eslint": "^3.8.1",
     "eslint-config-cleanjs": "^4.0.0",
     "eslint-plugin-better": "^0.1.5",
     "eslint-plugin-fp": "^2.2.0",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.11.0"
   }
 }
